
    HIVE-61. Implement "ORDER BY". (Namit Jain via zshao)

    HIVE-402. Implement UDF regexp. (Raghu Murthy via namit)

  IMPROVEMENTS
    HIVE-389. Option to build without ivy (jssarma)

    HIVE-360. Generalize the FileFormat Interface in Hive.
    (He Yongqiang via zshao)

    HIVE-406. Build file improvements. (Joydeep Sen Sarma via zshao).

  OPTIMIZATIONS

    HIVE-279. Predicate Pushdown support (Prasad Chakka via athusoo).

    HIVE-266. Use Text instead of String (Zheng Shao via namit).

    HIVE-427. Add missing config parameters in hive-default.xml.
    (Namit Jain via zshao)

  BUG FIXES

    HIVE-381. Fix JDBC HiveResultSet's next function.
    (Kim P via namit)
    
    HIVE-387. Use URI from FileSystem Object instead of from HADOOPFS
    directly. (jssarma)

    HIVE-385. Split Driver's run into compile and execute.
    (Neil Conway via namit)
  
    HIVE-393. Remove unnecessary checks in movetask for file type.
    (Zheng Shao via namit)

    HIVE-403. remove password param from job config that is submitted to job
    tracker and from log (Prasad Chakka)

    HIVE-407. fix permissions for test scripts in release tarball.
    (Ashish Thusoo via namit)

    HIVE-414. Add Hive Web Interface code to Eclipse config
    (Prasad Chakka)

    HIVE-372. Fix UDF memory consumptions and bad error messages.
    (Zheng Shao via namit)

    HIVE-413. Fix multi-table insert. (Namit Jain via zshao)

    HIVE-415. Fix long query parsing problems. (Zheng Shao via namit).

    HIVE-421. Fix union followed by multi-table insert. (Namit Jain via zshao).

    HIVE-423. Change launch templates to use hive_model.jar.
    (Raghotham Murthy via zshao)

    HIVE-426. Fix undeterministic query plan because of aliasToWork.
    (Namit Jain via zshao)

    HIVE-404. Fix ordering in "SELECT * FROM t SORT BY col1 LIMIT 100" when
    query is a outer-most query.  (Namit Jain via zshao)

    HIVE-416. Fix backtrack in Hive.g. (Namit Jain via zshao)
